--- a/WsOTPQueryCVC-web/src/main/webapp/index.html
+++ b/WsOTPQueryCVC-web/src/main/webapp/index.html
@@ -5,6 +5,6 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>[WS_OTP_PARAMETERS]</h1>
+        <h1>[WsOTPQueryCVC]</h1>
     </body>
 </html>
